update api definition
